--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -137,6 +137,10 @@ a:hover {
   text-decoration: none !important;
 }
 
+a {
+  color: #000 !important;
+}
+
 .btn-1 {
   color: #fff;
   background-color: #F76B6A;
@@ -221,18 +225,16 @@ header .icon {
   font-size: 1.8rem;
   margin-left: 20px;
 }
-header .cart-info {
-  display: none;
+header .cart-item-count {
   position: absolute;
-  bottom: -230px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #fff;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  z-index: 99;
-  opacity: 0;
+  top: 28px;
+  left: 118px;
+  background-color: gray;
+  color: #fff;
+  padding: 4px 8px;
+  border-radius: 50%;
+  font-size: 12px;
+  font-weight: bold;
 }
 header .cart-info.show {
   display: block;
@@ -1134,6 +1136,102 @@ img {
 
 .product-item:hover .product-item-options {
   display: block;
+}
+
+.checkout-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.3s;
+}
+
+.checkout-popup.show {
+  visibility: visible;
+  opacity: 1;
+}
+
+.checkout-popup-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.checkout-popup-content h2 {
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+}
+
+input[type=text],
+input[type=tel] {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.payment-method label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+}
+
+.btn-primary:active {
+  background-color: #004187;
+}
+
+.checkout-success-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.3s;
+}
+
+.checkout-success-popup-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.checkout-success-popup-content h2 {
+  margin-bottom: 10px;
 }
 
 .detail-product {
