--- a/asset/sass/Layouts/_header.scss
+++ b/asset/sass/Layouts/_header.scss
@@ -80,19 +80,31 @@ header {
         margin-left: $mg-1;
     }
 
-    .cart-info {
-        display: none;
+    // .cart-info {
+    //     display: none;
+    //     position: absolute;
+    //     bottom: -230px;
+    //     left: 50%;
+    //     transform: translateX(-50%);
+    //     background-color: #fff;
+    //     padding: 10px;
+    //     border: 1px solid #ccc;
+    //     border-radius: 4px;
+    //     z-index: 99;
+    //     opacity: 0;
+    // }
+    .cart-item-count {
         position: absolute;
-        bottom: -230px;
-        left: 50%;
-        transform: translateX(-50%);
-        background-color: #fff;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        z-index: 99;
-        opacity: 0;
-    }
+        top: 28px;
+        left: 118px;
+        background-color: gray;
+        color: #fff;
+        padding: 4px 8px;
+        border-radius: 50%;
+        font-size: 12px;
+        font-weight: bold;
+      }
+      
 
     .cart-info.show {
         display: block;
