--- a/asset/sass/Components/_buttons.scss
+++ b/asset/sass/Components/_buttons.scss
@@ -9,3 +9,13 @@
     background-color: #9c4343;
     text-decoration: none;
 }
+.site-btn {
+	font-size: 14px;
+	color: #ffffff;
+	font-weight: 800;
+	text-transform: uppercase;
+	display: inline-block;
+	padding: 13px 30px 12px;
+	background: coral;
+	border: none;
+}
