--- a/asset/sass/Layouts/_footer.scss
+++ b/asset/sass/Layouts/_footer.scss
@@ -138,3 +138,81 @@
 .copyright {
     margin-top: 25px;
 }
+
+#chat-popup {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 300px;
+    height: 400px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  #chat-header {
+    background-color: #f0f0f0;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  #chat-title {
+    font-weight: bold;
+  }
+  
+  #close-chat-btn {
+    float: right;
+    background-color: #f0f0f0;
+    border: none;
+    cursor: pointer;
+  }
+  
+  #chat-content {
+    padding: 10px;
+    height: 90%;
+    overflow-y: scroll;
+    background: #fff;
+  }
+  
+  #chat-messages {
+    margin-bottom: 10px;
+  }
+  
+  #user-input {
+    width: 100%;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+  }
+  
+  #open-chat-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px;
+    background-color: #000;
+    height: 60px;
+    width: 60px;
+    font-size: 25px;
+    color: #fff;
+    border: none;
+    border-radius: 34px 8px 34px 34px;
+    cursor: pointer;
+  }
+
+
+#user-options {
+    margin-top: 10px;
+  }
+  
+  .option-btn {
+    display: block;
+    margin-bottom: 5px;
+    padding: 5px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+  
+  
